# platform.tools.external_updater

./: .gitignore  Android.bp  Makefile  OWNERS  README.md  TEST_MAPPING  archive_utils.py  base_updater.py  color.py  conftest.py  crates_updater.py  external_updater.py  external_updater_reviewers_test.py  external_updater_test.py  fileutils.py  git_updater.py  git_utils.py  github_archive_updater.py  hashtags.py  manifest.py  metadata.proto  notifier.py  pyproject.toml  regen_bp.sh  reviewers.py  test_base_updater.py  test_fileutils.py  test_git_utils.py  test_manifest.py  test_updater_utils.py  update_package.sh  updater.sh  updater_utils.py
docs/: dev.md
kokoro/: build.sh  config.cfg  presubmit.cfg
kokoro/gcp_ubuntu/: compatible_repositories.txt  kokoro_build.sh  release.cfg
tests/: gitrepo.py  test_git_utils.py  test_gitrepo.py  test_updater_utils.py
tests/endtoend/: test_check.py  test_update.py
tests/endtoend/treebuilder/: fakeproject.py  test_fakeproject.py
